# Core-DEK

./: README.md  _tmp_sync.py  main_backup.py  pyproject.toml  requirements.txt  run.ps1
api/: server.py
blockchain/anchors/: ledger_anchor.py
cli/: main.py
cluster/autoscale/: autoscaler.py
cluster/consensus/: consensus_engine.py
cluster/election/: node_election.py
cluster/failover/: failover_engine.py
cluster/heartbeat/: heartbeat_engine.py
cluster/immune/: immune_engine.py
cluster/jobs/: job.py
cluster/memory/: distributed_memory.py
cluster/mesh/: distributed_event_bus.py
cluster/migration/: migration_engine.py
cluster/orchestrator/: orchestrator.py
cluster/recovery/: recovery_engine.py
cluster/registry/: node_registry.py
cluster/replay/: event_replay_engine.py
cluster/replication/: replication_engine.py
cluster/scheduler/: distributed_scheduler.py
cluster/state/: distributed_state.py
cluster/swarm/: swarm_orchestrator.py
cluster/telemetry/: telemetry_engine.py
cluster/transport/: transport_engine.py
cluster/workers/: node_health.py  remote_worker.py  worker_node.py
config/: dek.yaml
control_plane/api/: server.py
control_plane/monitoring/: cluster_monitor.py
control_plane/websocket/: socket_manager.py
dek/: config.py  control_plane.py
dek/plugins/: loader.py
dek/runtime/: state_store.py
examples/: demo_run.py
gui/dashboard/: Dashboard.jsx
kernel/async_runtime/: runtime.py
kernel/event_core/: ai_router.py  gateway.py  kernel_loop.py  rule_engine.py  (+1 more)
runtime/: state.json
scripts/: bootstrap.ps1
(+1 files in other folders)
